src/ui/snapshots/state/default/data_loading/complete_deps_skipped.snap
---
source: src/ui/state/default/data_loading.rs
assertion_line: 1794
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                   Loading Data                                                   │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Steps─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                     1 ✓ Fetch PRs  →  2 ✓ Work Items  →  3 ✓ Commit Info  →  4 − Dependencies                    │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Current Step──────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │                                                 Loading complete!                                                │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
